<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/verde_menta"
        android:radius="100dp"
        android:text="@string/button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


    <Button
        android:id="@+id/btn_Registrar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="118dp"
        android:layout_height="53dp"
        android:text="@string/registrate"
        android:textAlignment="viewStart"
        android:textColor="@color/verde_menta"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_ContraO"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="@color/verde_menta"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TextSizeCheck" />

    <EditText
        android:id="@+id/et_ResetEmail"
        style="@style/HintStyle"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/verde_menta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/et_ResetContra"
        style="@style/HintStyle"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/verde_menta"
        app:layout_constraintBottom_toTopOf="@+id/btn_ContraO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        app:passwordToggleEnabled="true"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_ResetEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/Logo_Login"
        android:layout_width="359dp"
        android:layout_height="169dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/usuario"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_ResetEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/candado" />

    <TextView
        android:id="@+id/tvor"
        android:layout_width="107dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvN"
        android:layout_width="105dp"
        android:layout_height="43dp"
        android:text="@string/eres_nuevo"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_Facebook"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/inicia_sesion_con_facebook"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="RtlHardcoded,TextSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_Google"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:drawableLeft="@drawable/google"
        android:text="@string/inicia_sesion_con_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>