<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <Button
        android:id="@+id/btn_FacebookR"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/inicia_sesion_con_facebook"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_GoogleR"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:drawableLeft="@drawable/google"
        android:text="@string/inicia_sesion_con_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvor2"
        android:layout_width="107dp"
        android:layout_height="24dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_CrearC"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/teal_200"
        android:radius="100dp"
        android:text="@string/crea_tu_cuenta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_ResetContra"
        style="@style/HintStyle"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_ResetRC"
        style="@style/HintStyle"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Confirmar Contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_ResetEmail"
        style="@style/HintStyle"
        android:layout_width="247dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_ResetEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403"
        app:srcCompat="@drawable/candado"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:srcCompat="@drawable/usuario2" />

    <TextView
        android:id="@+id/tvN2"
        android:layout_width="134dp"
        android:layout_height="21dp"
        android:text="@string/ya_tienes_cuenta"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_IniciarS"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:text="@string/inicia_sesion"
        android:textColor="@color/colorAzul"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="248dp"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColorHint="@color/colorAzul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>